Created leaderboard and fixed history

--- a/TQ/templates/base.html
+++ b/TQ/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +15,7 @@
                 <li class="nav-item"><a href="/account" class="nav-link">Account</a></li> 
                 <li class="nav-item"><a href="/history" class="nav-link">History</a></li> 
                 <li class="nav-item"><a href="/login" class="nav-link">Login</a></li> 
+                <li class="nav-item"><a href="/top" class="nav-link">Top achivers</a></li> 
             </ul> 
         </header> 
     </div>
